--- a/packages/morphomax-frontend/.env.example
+++ b/packages/morphomax-frontend/.env.example
@@ -1,8 +1,8 @@
 # Frontend
-VITE_APP_ID=154
+VITE_APP_ID=2353287477
 VITE_EXPECTED_AUDIENCE=https://localhost:5173
 VITE_IS_DEVELOPMENT=true
 VITE_SENTRY_DSN=
 
 # Backend
-VITE_BACKEND_API_URL=http://localhost:3000
+VITE_BACKEND_URL=http://localhost:3000
