--- a/packages/morphomax-frontend/.env.example
+++ b/packages/morphomax-frontend/.env.example
@@ -3,6 +3,8 @@ VITE_APP_ID=2353287477
 VITE_EXPECTED_AUDIENCE=https://localhost:5173
 VITE_IS_DEVELOPMENT=true
 VITE_SENTRY_DSN=
+VITE_VINCENT_BASE_RPC=https://mainnet.base.org
+VITE_VINCENT_YIELD_MINIMUM_DEPOSIT=50
 
 # Backend
 VITE_BACKEND_URL=http://localhost:3000
