--- a/packages/morphomax-backend/package.json
+++ b/packages/morphomax-backend/package.json
@@ -8,6 +8,7 @@
   },
   "packageManager": "pnpm@10.7.0",
   "scripts": {
+    "optimize:manual": "pnpm dotenvx run -- tsx src/lib/jobs/optimizeMorphoYield/optimizeMorphoYield.manual.ts",
     "graphql:schema": "pnpm dlx get-graphql-schema https://blue-api.morpho.org/graphql > src/lib/graphql/schema.graphql",
     "graphql:codegen": "graphql-codegen --config codegen.ts",
     "graphql": "pnpm run graphql:schema && pnpm run graphql:codegen",
@@ -15,7 +16,7 @@
     "lint": "pnpm eslint \"./src/**/*.{ts,tsx,js}\" --cache --cache-strategy content --cache-location .eslintcache",
     "build": "pnpm unbuild && pnpm sentry:sourcemaps",
     "esbuild": "node esbuild.mjs",
-    "dev": "pnpm run graphql && pnpm dotenvx run -- pnpm bun --watch src/bin/serverWorker.ts",
+    "dev": "pnpm run graphql && pnpm dotenvx run -- tsx watch src/bin/serverWorker.ts",
     "start": "node ./dist/bin/serverWorker.mjs",
     "startWorker": "node ./dist/bin/jobWorker.mjs",
     "startApiServer": "node ./dist/bin/apiServer.mjs",
@@ -44,9 +45,10 @@
     "@lit-protocol/contracts-sdk": "7.2.0",
     "@lit-protocol/lit-node-client": "7.2.0",
     "@lit-protocol/types": "7.2.0",
-    "@lit-protocol/vincent-ability-erc20-approval": "0.0.12-mma",
-    "@lit-protocol/vincent-ability-morpho": "0.0.12-mma",
+    "@lit-protocol/vincent-ability-erc20-approval-0.0.12-mma": "npm:@lit-protocol/vincent-ability-erc20-approval@0.0.12-mma",
+    "@lit-protocol/vincent-ability-morpho-0.0.12-mma": "npm:@lit-protocol/vincent-ability-morpho@0.0.12-mma",
     "@lit-protocol/vincent-app-sdk": "0.0.12-mma",
+    "@lit-protocol/vincent-contracts-sdk": "^1.0.1",
     "@lit-protocol/vincent-scaffold-sdk": "1.1.9-mma",
     "@morpho-org/blue-api-sdk": "^2.8.1",
     "@morpho-org/blue-sdk": "^4.2.0",
@@ -63,8 +65,9 @@
     "did-jwt": "^8.0.9",
     "ethers": "^5.8.0",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.18.0",
     "node-cache": "^5.1.2",
+    "semver": "^7.7.2",
     "viem": "^2.33.0",
     "zod": "^3.24.2"
   },
@@ -78,11 +81,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
-    "bun": "^1.2.6",
+    "@types/semver": "^7.7.0",
     "esbuild": "^0.25.1",
     "graphql": "^16.11.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.0",
+    "tsx": "^4.7.1",
     "unbuild": "^3.6.0"
   }
 }
