--- a/package.json
+++ b/package.json
@@ -22,6 +22,18 @@
   },
   "packageManager": "pnpm@10.7.0",
   "keywords": [],
+  "pnpm": {
+    "overrides": {
+      "ethers": "^5.8.0",
+      "zod": "^3.25.76"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "ethers": "5.8.0",
+        "zod": "3.25.76"
+      }
+    }
+  },
   "devDependencies": {
     "@dotenvx/dotenvx": "^0.26.0",
     "@tsconfig/node20": "^20.1.5",
@@ -44,8 +56,7 @@
     "prettier-plugin-jsdoc": "^1.3.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.0",
-    "typescript-eslint": "^8.29.0",
-    "zod": "^3.22.4"
+    "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
     "consola": "^3.2.3",
