--- a/packages/morphomax-backend/package.json
+++ b/packages/morphomax-backend/package.json
@@ -13,8 +13,8 @@
     "graphql:codegen": "graphql-codegen --config codegen.ts",
     "graphql": "pnpm run graphql:schema && pnpm run graphql:codegen",
     "test": "pnpm jest",
-    "lint": "pnpm eslint \"./src/**/*.{ts,tsx,js}\" --cache --cache-strategy content --cache-location .eslintcache",
     "build": "pnpm unbuild && pnpm sentry:sourcemaps",
+    "lint": "pnpm eslint ./src",
     "esbuild": "node esbuild.mjs",
     "dev": "pnpm run graphql && pnpm dotenvx run -- tsx watch src/bin/serverWorker.ts",
     "start": "node ./dist/bin/serverWorker.mjs",
@@ -37,6 +37,10 @@
     "apiServer": "./dist/bin/apiServer.mjs"
   },
   "private": true,
+  "peerDependencies": {
+    "ethers": "^5.8.0",
+    "zod": "^3.25.76"
+  },
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@dotenvx/dotenvx": "^1.39.0",
@@ -64,13 +68,11 @@
     "cors": "^2.8.5",
     "dataloader": "^2.2.3",
     "did-jwt": "^8.0.9",
-    "ethers": "^5.8.0",
-    "express": "^4.21.2",
+    "express": "^5.0.1",
     "mongoose": "^8.18.0",
     "node-cache": "^5.1.2",
     "semver": "^7.7.2",
-    "viem": "^2.33.0",
-    "zod": "^3.24.2"
+    "viem": "^2.33.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.7",
@@ -84,10 +86,12 @@
     "@types/jest": "^29.5.14",
     "@types/semver": "^7.7.0",
     "esbuild": "^0.25.1",
+    "ethers": "^5.8.0",
     "graphql": "^16.11.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.0",
     "tsx": "^4.7.1",
-    "unbuild": "^3.6.0"
+    "unbuild": "^3.6.0",
+    "zod": "^3.25.76"
   }
 }
