--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm -r run build",
-    "heroku-postbuild": "pnpm --filter morphomax-backend --parallel run build",
+    "heroku-postbuild": "pnpm --filter morphomax-backend run build && pnpm --filter morphomax-backend run sentry:sourcemaps",
     "lint": "pnpm -r lint",
     "clean": "pnpm exec rm -Rf node_modules dist && pnpm --parallel -r run clean",
     "test": "pnpm -r run test",
