--- a/packages/morphomax-backend/package.json
+++ b/packages/morphomax-backend/package.json
@@ -13,8 +13,8 @@
     "graphql:codegen": "graphql-codegen --config codegen.ts",
     "graphql": "pnpm run graphql:schema && pnpm run graphql:codegen",
     "test": "pnpm jest",
-    "build": "pnpm unbuild && pnpm sentry:sourcemaps",
     "lint": "pnpm eslint ./src",
+    "build": "pnpm unbuild",
     "esbuild": "node esbuild.mjs",
     "dev": "pnpm run graphql && pnpm dotenvx run -- tsx watch src/bin/serverWorker.ts",
     "start": "node ./dist/bin/serverWorker.mjs",
