--- a/packages/yield-frontend/package.json
+++ b/packages/yield-frontend/package.json
@@ -68,7 +68,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "eslint-plugin-react-hooks": "6.0.0-rc.2",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.6",
     "ethers": "^5.8.0",
