--- a/packages/yield-frontend/package.json
+++ b/packages/yield-frontend/package.json
@@ -40,6 +40,7 @@
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-table": "^8.21.2",
+    "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.18",
+    "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.4"
