fix: remove script from npm run configs with a removed script

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "test": "pnpm -r run test",
     "dev": "pnpm build && pnpm -r run dev",
     "prepare": "husky",
-    "start": "pnpm -r run start",
-    "link-local-vincent-sdk-dev": "pnpm dotenvx run -- ./linkVincentSdkLocaldev.sh"
+    "start": "pnpm -r run start"
   },
   "packageManager": "pnpm@10.7.0",
   "keywords": [],
