--- a/packages/yield-frontend/package.json
+++ b/packages/yield-frontend/package.json
@@ -18,7 +18,8 @@
     "clean": "pnpm exec rm -Rf node_modules dist"
   },
   "peerDependencies": {
-    "ethers": "^5.8.0"
+    "ethers": "^5.8.0",
+    "zod": "^3.25.76"
   },
   "dependencies": {
     "@lit-protocol/auth-helpers": "7.2.0",
@@ -44,7 +45,6 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ethers": "^5.8.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -79,7 +79,8 @@
     "playwright": "^1.51.1",
     "storybook": "^8.6.7",
     "vite": "^6.2.0",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "zod": "^3.25.76"
   },
   "eslintConfig": {
     "extends": [
