--- a/packages/yield-frontend/.env.example
+++ b/packages/yield-frontend/.env.example
@@ -4,6 +4,7 @@ VITE_EXPECTED_AUDIENCE=https://localhost:5173
 VITE_IS_DEVELOPMENT=true
 VITE_SENTRY_DSN=
 VITE_VINCENT_YIELD_MINIMUM_DEPOSIT=50
+VITE_TOTAL_DEPOSITS=~350k USDC
 
 # Backend
 VITE_BACKEND_URL=http://localhost:3000
