feat: define new job intervals with an env variable

--- a/packages/yield-backend/.env.example
+++ b/packages/yield-backend/.env.example
@@ -5,6 +5,7 @@ MINIMUM_USDC_BALANCE=1
 MINIMUM_YIELD_IMPROVEMENT_PERCENT=1
 MINIMUM_VAULT_TOTAL_ASSETS_USD=500000
 MONGODB_URI=mongodb://root:password@localhost/?retryWrites=true&w=majority&appName=VincentMorphomaxBackend
+NEW_SCHEDULE_FREQUENCY=1 week
 VINCENT_DELEGATEE_PRIVATE_KEY="YOUR DELEGATEE PRIVATE KEY"
 VINCENT_APP_ID=961992704
 PORT=3000
